--- a/Components/Pages/Print.razor
+++ b/Components/Pages/Print.razor
@@ -54,7 +54,7 @@
                                    Variant="Variant.Filled"
                                    Color="Color.Primary"
                                    Style="font-family: monospace; font-size: 14px;">
-                            Submit/Enter
+                            Submit(Enter)
                         </MudButton>
                     </div>
                 </div>
